# madi-bot

./: .env  .gitignore  Cargo.toml  README.md  dockerfile
.github/workflows/: docker-build.yml
src/: game_notes_watcher.rs  main.rs  shop_watcher.rs
src/.continue/rules/: file-path-conventions.md
